CFN-DAY-6/Outputs/Componentisation/security-groups/sec-groups.yml
AWSTemplateFormatVersion: 2010-09-09
Description: this template provisions the webserver and DB security groups
Metadata: {}

Parameters: 
  DevWebserverSGGN:
    Description: Please provide your DevWeberserver Security group name
    Type: String
    Default: DevWebserverSGGN

  DevWebserverSGGD:
    Description: Please provide your Webserver Security group description
    Type: String
    Default: enabling ssh and http

  DevDBserverSGGN:
    Description: Please provide your Dev DB server Security group name
    Type: String
    Default: DevDBserverSGGN

  DevDBserverSGGD:
    Description: Please provide your Dev DB server Security group description
    Type: String
    Default: enabling MySql

Mappings: {}

Conditions: {}

Resources: 
 # Webserver Security Group
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGN
      GroupDescription: !Ref DevWebserverSGGD
      VpcId: !ImportValue DevVPCID # Importing VPC ID exported name
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG 
  # Databse Security Group
  DevDBserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGN
      GroupDescription: !Ref DevDBserverSGGD
      VpcId: !ImportValue DevVPCID # Importing VPC ID exported name
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
        
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
        
      Tags:
        - Key: Name
          Value: DevDBserverSG 
Outputs:
  DevWebserverSGIDExportOutput: 
    Description: Exporting Dev webserver SG ID
    Value: !Ref DevWebserverSG # reference the logical name of the resource (the identifier)
    Export: 
      Name: DevWebserverSGID
